tests/snapshots/examples_fixtures/type_system__failing__07_typed_let_float_into_int.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/07_typed_let_float_into_int.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Float with Int.

  --> examples/type_system/failing/07_typed_let_float_into_int.flx:1:13
  |
1 | let answer: Int = 42.5
  |             ^^^
  |             --- expected Float, found Int


--> compiler error[E055]: TYPE MISMATCH

Expected Int, got Float.

  --> examples/type_system/failing/07_typed_let_float_into_int.flx:1:19
  |
1 | let answer: Int = 42.5
  |                   ^^^^
  |                   ---- initializer type is known at compile time

Help:
  binding initializer does not match type annotation

Found 2 errors.
== stdout ==
<not executed>
